Bug 1271609 - Make ReleaseAllJITCode call Zone::discardJitCode instead of duplicating it. r=jonco

--HG--
extra : rebase_source : fb6f46e2c85b9696876bf2d4d90a83e95bfdc369